# ComfyUI_EaselHub_Nodes

./: .gitignore  LICENSE  README.md  __init__.py  anime.txt  api.json  comfyui_dev.txt  dev.txt  install.py  install_packages.bat  pyproject.toml  requirements.txt
ComfyUI_Dev/: 01_架构总览与目录规范.md  02_Python后端开发_核心篇.md  03_数据流与Tensor操作_进阶篇.md  04_前端交互与JS扩展_高级篇.md  05_动态控制与高级特性_专家篇.md  06_发布标准与注册表_2025版.md
example/: Z-image动漫转真人.json  flux2-klein编辑+高清修复.json  klein双图融合.json  klein老照片.json  klein遮罩.json
js/: ehn_align.js  ehn_group_manager.js  ehn_image_compare.js  ehn_image_comparer.js  ehn_image_stack.js  ehn_model_bus.js  ehn_open_url.js  ehn_seed.js  ehn_set_get.js  ehn_setget.js  ehn_smart_resolution.js
nodes/: ehn_ai_generator.py  ehn_birefnet.py  ehn_color_match.py  ehn_florence2.py  ehn_generation.py  ehn_group_manager.py  ehn_image_compare.py  ehn_image_comparison.py  ehn_image_loader.py  ehn_image_ops.py  ehn_image_resize.py  ehn_image_stack.py  ehn_image_tile.py  ehn_image_tiling.py  ehn_image_utils.py  ehn_io.py  ehn_llm.py  ehn_load_images.py  ehn_logic.py  ehn_logic_data.py  ehn_mask_ops.py  ehn_math_logic.py  ehn_number_ops.py  ehn_prompt.py  ehn_resolutions.py  ehn_schedulers.py  ehn_seed.py  ehn_set_get.py  ehn_smart_resolution.py  ehn_system_utils.py  ehn_teacache.py  ehn_text_ops.py  ehn_tiling.py  ehn_utils.py  ehn_variable.py  ehn_wd14.py  image_compare.py  image_comparison.py  image_info.py  image_resize.py  (+6 more)
py/: easel_color_match.py  easel_florence2_tagger.py  easel_group_manager.py  easel_image_comparer.py  easel_image_resize.py  easel_seed.py  (+18 more)
(+12 files in other folders)
