[project]
name = "comfyui_easelhub_nodes"
description = "EaselHub custom nodes for ComfyUI"
version = "1.0.0"
dependencies = [
    "transformers>=4.49.0", 
    "huggingface_hub",
    "torch",
    "numpy",
    "Pillow",
    "diffusers",
    "timm",
    "einops",
    "scikit-image"
]

[project.urls]
Repository = "https://github.com/EaselHub/ComfyUI_EaselHub_Nodes"
